2017-01-03  Kirit Saelensminde  <kirit@felspar.com>
 Switch to the new version of Boost Spirit. Drop support for Boost version prior to !.59.

2016-12-16  Kirit Saelensminde  <kirit@felspar.com>
 Add a cookie header parser.

2016-11-26  Kirit Saelensminde  <kirit@felspar.com>
 Replace older Boost code with `std::function` and lambdas.

2016-09-18  Kirit Saelensminde  <kirit@felspar.com>
 Make the remote address properly available on the server HTTP request.

2016-09-14  Kirit Saelensminde  <kirit@felspar.com>
 The HTTP server now adds a header describing the remote address.

2016-09-09  Kirit Saelensminde  <kirit@felspar.com>
 Handle setting MIME headers via JSON.

2016-08-08  Kirit Saelensminde  <kirit@felspar.com>
 Swap a `std::list` for a `std::vector` in the query string interface.

2016-08-07  Kirit Saelensminde  <kirit@felspar.com>
 Fix a bug in the server request so it properly returns a reference to the query string.

2016-07-30  Kirit Saelensminde  <kirit@felspar.com>
 * Allow a `jcursor` to access header sub-values.
 * Allow header content to be created from a JSON object.

2016-07-29  Kirit Saelensminde  <kirit@felspar.com>
 * Allow access to some parts of the server request using a `jcursor`.
 * Drop MIME headers that have an underscore in their names.

2016-07-28  Kirit Saelensminde  <kirit@felspar.com>
 Add shortcut method on HTTP request for getting to the headers.

2015-11-20  Kirit Saelensminde  <kirit@felspar.com>
 Removed use of deprecated Fost APIs.

2015-10-20  Kirit Saelensminde  <kirit@felspar.com>
 Make sure the web server logs an error message when it catches an excepion.

2015-05-10  Kirit Saelensminde  <kirit@felspar.com>
 Remove all uses of auto_ptr. Replace some with move semantics, others with unique_ptr.

2015-05-06  Kirit Saelensminde  <kirit@felspar.com>
 Fixed up the tests to use the new service API on the network connections.

2015-04-30  Kirit Saelensminde  <kirit@felspar.com>